--- a/src/app/mitav/mitav-delirium/mitav-delirium-for-department/mitav-delirium-for-department.component.scss
+++ b/src/app/mitav/mitav-delirium/mitav-delirium-for-department/mitav-delirium-for-department.component.scss
@@ -407,4 +407,15 @@
     white-space: normal !important; // Allow text wrapping
     text-align: center;
   }
+  .blink-text {
+    color: red;
+    font-weight: bold;
+    animation: blink-animation 1s infinite;
+  }
+  
+  @keyframes blink-animation {
+    0% { opacity: 1; }
+    50% { opacity: 0; }
+    100% { opacity: 1; }
+  }
   
