--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -55,8 +55,10 @@
 </div> -->
 <!-- <app-sql></app-sql> -->
 <div class="body">
+  <!-- <app-header-new></app-header-new> -->
   <router-outlet>
   </router-outlet>
+  <app-footer></app-footer>  <!-- ✅ Global Footer -->
 </div>
 
 <!-- <app-footer></app-footer> -->
