--- a/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
+++ b/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
@@ -85,12 +85,12 @@
       <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך דיווח </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.DescriptionEntryDate | date:'dd/MM/yyyy' }} </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="DescriptionCognitive">
+    <!-- <ng-container matColumnDef="DescriptionCognitive">
       <mat-header-cell *matHeaderCellDef mat-sort-header>מלל חופשי</mat-header-cell>
       <mat-cell *matCellDef="let element">
         {{ element.DescriptionCognitive ? element.DescriptionCognitive : 'אין תיעוד' }}
       </mat-cell>
-    </ng-container>
+    </ng-container> -->
     <!-- Table Header and Rows -->
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
