--- a/src/app/mitav/mitav-delirium/mitav-delirium-for-department/mitav-delirium-for-department.component.scss
+++ b/src/app/mitav/mitav-delirium/mitav-delirium-for-department/mitav-delirium-for-department.component.scss
@@ -423,5 +423,10 @@
     color: red;
     font-weight: bold;
   }
-  
+  .clickable-row {
+    cursor: pointer;
+    &:hover {
+      background-color: rgba(0, 0, 255, 0.1); /* Light blue hover effect */
+    }
+  }
   
