--- a/src/app/mitav/mitav-geriatric-for-department/mitav-geriatric-for-department.component.html
+++ b/src/app/mitav/mitav-geriatric-for-department/mitav-geriatric-for-department.component.html
@@ -20,16 +20,40 @@
       <button mat-raised-button color="primary" (click)="resetFilters()">איפוס</button>
       <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon" width="50px" />
     </form>
-  
-    <mat-table #pdfTable [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
-      <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
-        <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnLabels[column] }}</mat-header-cell>
-        <mat-cell *matCellDef="let element">{{ element[column] || 'לא זמין' }}</mat-cell>
-      </ng-container>
+    <div class="gauge-item">
+        <div class="gauge-title">אומדן CAM</div>
+        <ngx-gauge
+          [value]="camAssessmentGauge"
+          [min]="0"
+          [max]="100"
+          [label]="''"
+          [append]="'%'"
+          [foregroundColor]="camAssessmentGaugeColor()"> 
+        </ngx-gauge>
+        <div class="gauge-info">
+          <strong> תקין {{ validCAMCount }} / לא תקין {{ invalidCAMCount }} / סה"כ - {{ totalCAMCases }} </strong>
+        </div>
+      </div>
+      <mat-table #pdfTable [dataSource]="dataSource" matSort dir="rtl" class="mat-elevation-z8">
+        <ng-container *ngFor="let column of displayedColumns" [matColumnDef]="column">
+          <mat-header-cell *matHeaderCellDef mat-sort-header>{{ columnLabels[column] }}</mat-header-cell>
+          <mat-cell *matCellDef="let element">
+            <!-- ✅ Apply Date Pipe for Date Columns -->
+            <span *ngIf="isDateColumn(column); else textTemplate">
+              {{ element[column] | date:'dd/MM/yyyy' }}
+            </span>
       
-      <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-      <mat-row *matRowDef="let row; columns: displayedColumns;" class="clickable-row"></mat-row>
-    </mat-table>
+            <!-- ✅ Fallback for Non-Date Values -->
+            <ng-template #textTemplate>
+              {{ element[column] || 'לא זמין' }}
+            </ng-template>
+          </mat-cell>
+        </ng-container>
+      
+        <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
+        <mat-row *matRowDef="let row; columns: displayedColumns;" class="clickable-row"></mat-row>
+      </mat-table>
+      
   
     <mat-paginator [pageSizeOptions]="[5, 25, 50]" showFirstLastButtons></mat-paginator>
   </div>
