--- a/src/app/mitav/mitav-delirium/mitav-delirium.component.html
+++ b/src/app/mitav/mitav-delirium/mitav-delirium.component.html
@@ -14,7 +14,7 @@
   <div *ngIf="!isLoading" class="body">
     <!-- Title Section -->
     <div class="nine">
-      <h1> דוח מיתב - דליריום</h1>
+      <h1>דאשבורד מיתב - דליריום </h1>
     </div>
 <div class="table-container">
   
