--- a/src/app/mitav/mitav-geriatric/mitav-geriatric.component.html
+++ b/src/app/mitav/mitav-geriatric/mitav-geriatric.component.html
@@ -3,7 +3,8 @@
 
 <div *ngIf="!isLoading" class="body">
     <div class="nine">
-      <h1>דו"ח גריאטריה במחלקות</h1>
+        <h1>דאשבורד מיתב - ייעוץ גריאטרי </h1>
+
     </div>
   
     <!-- ✅ Wrap filters inside a form with [formGroup]="filterForm" -->
