--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -13,7 +13,7 @@
 <div *ngIf="!isLoading" class="body">
   <!-- Title Section -->
   <div class="nine">
-    <h1>דוח מיתב</h1>
+    <h1>דאשבורד מיתב - נידות </h1>
   </div>
 
 <!-- Filters Section -->
