--- a/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
+++ b/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
@@ -41,61 +41,48 @@
 
   <!-- Data Table with Pagination and Sorting -->
   <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8" dir="rtl">
-    <!-- Column Definitions with Hebrew Headers -->
-    <ng-container matColumnDef="EntryDate">
+  
+    <ng-container matColumnDef="Admission_Date">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך קבלה </mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.Admission_Date | date: 'dd/MM/yyyy' }} </mat-cell>
+    </ng-container>
+  
+    <!-- <ng-container matColumnDef="EntryDate">
       <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך דיווח </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.EntryDate | date:'dd/MM/yyyy' }} </mat-cell>
     </ng-container>
-
+   -->
     <ng-container matColumnDef="UnitName">
       <mat-header-cell *matHeaderCellDef mat-sort-header> שם מחלקה </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.UnitName }} </mat-cell>
     </ng-container>
-
-    <ng-container matColumnDef="ICD9">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> קוד ICD9 </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.ICD9 }} </mat-cell>
-    </ng-container>
-
-    <ng-container matColumnDef="DiagnosisName">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> אבחנה </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.DiagnosisName }} </mat-cell>
-    </ng-container>
-
+  
     <ng-container matColumnDef="IdNum">
       <mat-header-cell *matHeaderCellDef mat-sort-header> ת.ז </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.IdNum }} </mat-cell>
     </ng-container>
-
+  
     <ng-container matColumnDef="AdmissionNo">
       <mat-header-cell *matHeaderCellDef mat-sort-header> מספר אשפוז </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.AdmissionNo }} </mat-cell>
     </ng-container>
-
+  
     <ng-container matColumnDef="FirstName">
       <mat-header-cell *matHeaderCellDef mat-sort-header> שם פרטי </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.FirstName }} </mat-cell>
     </ng-container>
-
     <ng-container matColumnDef="LastName">
       <mat-header-cell *matHeaderCellDef mat-sort-header> שם משפחה </mat-header-cell>
       <mat-cell *matCellDef="let element"> {{ element.LastName }} </mat-cell>
     </ng-container>
-    <ng-container matColumnDef="DescriptionEntryDate">
-      <mat-header-cell *matHeaderCellDef mat-sort-header> תאריך דיווח </mat-header-cell>
-      <mat-cell *matCellDef="let element"> {{ element.DescriptionEntryDate | date:'dd/MM/yyyy' }} </mat-cell>
+    <ng-container matColumnDef="DataStatus">
+      <mat-header-cell *matHeaderCellDef mat-sort-header> מקור</mat-header-cell>
+      <mat-cell *matCellDef="let element"> {{ element.DataStatus }} </mat-cell>
     </ng-container>
-    <!-- <ng-container matColumnDef="DescriptionCognitive">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>מלל חופשי</mat-header-cell>
-      <mat-cell *matCellDef="let element">
-        {{ element.DescriptionCognitive ? element.DescriptionCognitive : 'אין תיעוד' }}
-      </mat-cell>
-    </ng-container> -->
-    <!-- Table Header and Rows -->
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openPatientDialog(row)" class="clickable-row"></mat-row>
   </table>
-
+  
   <!-- ✅ Pagination Control -->
   <mat-paginator [pageSize]="10" [pageSizeOptions]="[10, 25, 50]" showFirstLastButtons></mat-paginator>
 </div>
