--- a/src/app/mitav/mitav-main-page/mitav-main-page.component.scss
+++ b/src/app/mitav/mitav-main-page/mitav-main-page.component.scss
@@ -6,7 +6,8 @@
   }
   
   .example-card {
-    width: 300px;
+    width: 500px;
+    height: 300px;
     cursor: pointer;
     transition: transform 0.3s, box-shadow 0.3s;
     border-radius: 10px;
