--- a/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
+++ b/src/app/chameleon-reports/dementia-patients/dementia-patients.component.html
@@ -35,6 +35,8 @@
           <i class="material-icons">refresh</i>
         </button>
         <img src="../../assets/excel.png" alt="Download" (click)="exportToExcel()" class="download-icon icon" width="50px" style="margin-right: 10px;" />
+        <!-- <button mat-button color="primary" (click)="exportAsPDF()">הדפס PDF</button> -->
+
       </div>
     </div>
   </form>
