--- a/src/app/mitav/mitav-geriatric/mitav-geriatric.component.html
+++ b/src/app/mitav/mitav-geriatric/mitav-geriatric.component.html
@@ -80,7 +80,7 @@
   
     <!-- ✅ Gauge -->
     <div class="gauge-item">
-        <div class="gauge-title">אומדן CAM</div>
+        <div class="gauge-title"> ייעוץ גריאטרי</div>
         <ngx-gauge
           [value]="geriatricAssessmentGauge"
           [min]="0"
