--- a/src/app/mitav/mitav-mobility/mitav-mobility.component.html
+++ b/src/app/mitav/mitav-mobility/mitav-mobility.component.html
@@ -52,14 +52,15 @@
         </mat-form-field>
 
         <!-- Year Filter -->
-        <mat-form-field class="filter-field">
-          <mat-label>בחר שנה</mat-label>
-          <mat-select [(ngModel)]="selectedYear" (selectionChange)="applyFilters()">
-            <mat-option *ngFor="let year of yearList" [value]="year">
-              {{ year }}
-            </mat-option>
-          </mat-select>
-        </mat-form-field>
+      <!-- Year Filter -->
+<mat-form-field class="filter-field">
+  <mat-label>בחר שנה</mat-label>
+  <mat-select [(ngModel)]="selectedYear" (selectionChange)="selectedQuarter = null; applyFilters()">
+    <mat-option *ngFor="let year of yearList" [value]="year">
+      {{ year }}
+    </mat-option>
+  </mat-select>
+</mat-form-field>
 
         <!-- Quarter Filter -->
         <mat-form-field class="filter-field">
