--- a/src/app/components/spinner/spinner.component.html
+++ b/src/app/components/spinner/spinner.component.html
@@ -6,6 +6,6 @@
            alt="Hospital and Mobility"
            class="loading-image" />
     </div>
-    <p class="loading-text">...אוסף נתונים לדוח מיתב</p>
+    <p class="loading-text">... טוען נתונים</p>
   </div>
   
