--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,6 +54,7 @@
   >
 </div> -->
 <!-- <app-sql></app-sql> -->
+<app-header-new></app-header-new>
 <div class="body">
   <!-- <app-header-new></app-header-new> -->
   <router-outlet>
