--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,5 +1,3 @@
 <footer dir="rtl" class="text-center">
-    <p>&#169; כל הזכויות שמורות למחלקת מערכות מידע, המרכז הרפואי צפון - 
-
-        {{year}} </p>
+    <p>&#169; כל הזכויות שמורות למחלקת מערכות מידע, המרכז הרפואי צפון - {{year}}</p>
 </footer>
