--- a/src/app/ServiceCRM/user-crm/user-crm.component.html
+++ b/src/app/ServiceCRM/user-crm/user-crm.component.html
@@ -2,13 +2,21 @@
 
 <mat-card  *ngIf="!isLoading" class="crm-container">
     <mat-card-title>ניהול משתמשים (CRM)</mat-card-title>
-  
-    <div class="filter-section">
+    <!-- CRM Image Card -->
+    <mat-card class="crm-card">
+        <img src="assets/crm-data-entry-services.jpg" alt="CRM Data Entry Services">
+      </mat-card>
+    <!-- <div class="filter-section">
       <mat-form-field appearance="outline">
         <mat-label>חפש...</mat-label>
         <input matInput (keyup)="applyFilter($event)" placeholder="הזן ערך לחיפוש">
       </mat-form-field>
-    </div>
+    </div> -->
+    <mat-form-field class="long-search-bar" style="flex: 1; margin-right: 10px;">
+        <mat-label class="filters" style="color: blue">חיפוש</mat-label>
+        <input matInput (keyup)="applyFilter($event)" class="search-input" />
+      </mat-form-field>
+
   
     <div class="table-container">
       <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
@@ -92,9 +100,8 @@
           <th mat-header-cell *matHeaderCellDef mat-sort-header>עדכון מנהל תיק</th>
           <td mat-cell *matCellDef="let element"> {{ element.CaseManagerUpdate | date:'dd/MM/yyyy' }} </td>
         </ng-container>
-  
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openPhoneCallDialog(row)" class="clickable-row"></tr>
       </table>
     </div>
   
