--- a/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.scss
+++ b/src/app/ServiceCRM/phone-call-dialog/phone-call-dialog.component.scss
@@ -20,6 +20,7 @@
     text-align: right;
     background-color: #f9f9f9;
     border-radius: 10px;
+    height: 700px;
   }
   
   /* Patient Details Card */
@@ -27,20 +28,21 @@
     width: 100%;
     background: white;
     border-radius: 12px;
-    padding: 5px;
+    padding: 2px;
     //box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-    margin-bottom: 15px;
+    margin-bottom: 5px;
     text-align: right; // Align text to the right
   
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+  
   }
   
   
   .header {
     width: 100%;
-    display: flex;
+    //display: flex;
     justify-content: center; // Center horizontally
     margin-bottom: 8px;
   }
@@ -66,6 +68,8 @@
     display: flex;
     align-items: center;
     gap: 5px;
+    width: 100%;
+
   }
   
   .name {
@@ -83,7 +87,7 @@
   .contact-info {
     display: grid;
     grid-template-columns: repeat(2, 1fr); // ✅ 2 per row
-    gap: 10px;
+    gap: 50px;
     justify-content: center; // ✅ Center grid
     text-align: center;
   }
@@ -94,6 +98,8 @@
     align-items: center;
     font-size: 14px;
     color: #333;
+    justify-content: flex-end; // ✅ Align text to the right
+
   }
   .contact-item mat-icon {
     font-size: 20px;
