--- a/src/app/mitav/mitav-summary/mitav-summary.component.html
+++ b/src/app/mitav/mitav-summary/mitav-summary.component.html
@@ -1,8 +1,9 @@
 <app-spinner [isLoading]="isLoading"></app-spinner>
 
 <div *ngIf="!isLoading" class="body" >
-    <!-- <h2 class="table-title">1. אוכלוסיות בגיליון</h2> -->
-
+    <div class="tables-container">
+        <div class="table-wrapper">
+    <h2 class="table-title">1. אוכלוסיות בגיליון</h2>
     <table mat-table [dataSource]="tableData" class="mat-elevation-z8" *ngIf="!isLoading" dir="rtl">
   
       <!-- Define Columns -->
@@ -38,5 +39,39 @@
       <tr mat-row *matRowDef="let row; columns: ['totalPatients', 'internalAndSurgicalPatients', 'walkingProgramPatients', 'walkingProgramAchieved70'];"></tr>
   
     </table>
+</div>
+<div class="table-wrapper">
+
+      <!-- Second Table Title -->
+  <h2 class="table-title">2. משתתפים בתכנית הליכה לפי מחלקה (יעד 1)</h2>
+
+  <table mat-table [dataSource]="departmentTableData" class="mat-elevation-z8" *ngIf="!isLoading" dir="rtl">
+
+    <ng-container matColumnDef="departmentType">
+      <th mat-header-cell *matHeaderCellDef> סוג המחלקה (פנימית \ כירורגית) </th>
+      <td mat-cell *matCellDef="let row"> {{ row.departmentType }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="departmentName">
+      <th mat-header-cell *matHeaderCellDef> שם המחלקה (למשל: כירורגיה כללית א') </th>
+      <td mat-cell *matCellDef="let row"> {{ row.departmentName }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="totalPatients">
+      <th mat-header-cell *matHeaderCellDef> מספר מאושפזים בני 65+ במחלקה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.totalPatients }} </td>
+    </ng-container>
+
+    <ng-container matColumnDef="walkingParticipants">
+      <th mat-header-cell *matHeaderCellDef> מאושפזים בגיל 65+ שהשתתפו בתכנית הליכה </th>
+      <td mat-cell *matCellDef="let row"> {{ row.walkingParticipants }} </td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="['departmentType', 'departmentName', 'totalPatients', 'walkingParticipants']"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['departmentType', 'departmentName', 'totalPatients', 'walkingParticipants'];"></tr>
+  </table>
+</div>
+
+
   </div>
   
